Revision history for Perl extension Params::CallbackRequest.

1.10  
      - Code moved over from MasonX::ApacheHandler::WithCallbacks, which is
        deprecated. Differences from that class are as follows.
      - Code from MasonX::ApacheHandler::WithCallbacks has been migrated to
        Params::CallbackRequest.
      - Code from MasonX::CallbackHandler has been migrated to
        Params::Callback.
      - MasonX::CallbackTester has been removed, since it isn't necessary
        in a non-mod_perl environment.
      - Created Params::CallbackRequest::Exceptions to create all of the exception
        classes used by Params::CallbackRequest. These no longer inherit from
        HTML::Mason::Exception, of course, but from Exception::Class::Base.
      - Renamed the "exec_null_cb_values" parameter to "ignore_nulls". It is
        now false by default, and you pass a true value to enable it. Thus the
        semantics are the opposite of "exec_null_cb_values", but the result is
        the same.
      - Renamed the "cb_exception_handler" to "exception_handler", since it's
        now obvious that it applies to callbacks.
      - Changed the request_args() accessor from that was in
        MasonX::CallbackHandler to params() in Params::Callback, to reflect
        the idea that this is a generic parameter-triggered callback
        architecture.
      - Replaced the ah() accessor, since the callback controller isn't a
        Mason ApacheHandler anymore, with cb_request() in Params::Callback.
      - Replaced the "exec_null_cb_values" parameter from
        MasonX::ApacheHandler::WithCallbaks, which had defaulted to true, with
        "ignore_nulls" in Params::CallbackRequest, which defaults to false.